--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^4.4.4"
   },
   "devDependencies": {
     "nodemon": "^1.9.0"
