--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
-    "mongoose": "^4.4.4"
+    "method-override": "^2.3.5",
+    "mongoose": "^4.4.4",
+    "passport": "^0.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.9.0"
